Fix button background-color for color contrast

--- a/wdn/templates_5.2/scss/variables/_variables.buttons.scss
+++ b/wdn/templates_5.2/scss/variables/_variables.buttons.scss
@@ -10,7 +10,7 @@
 
 
 // Background color (inverse listed first for use with non-inverse in dark mode)
-$bg-color-button-inverse-primary: $light-gray;                                      // Background-color for inverse primary button
+$bg-color-button-inverse-primary: $lighter-gray;                                    // Background-color for inverse primary button
 
 $bg-color-button-inverse-primary-hover: $white;                                     // Background-color for inverse secondary and tertiary buttons on hover
 
